--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shoko",
   "version": "1.0.1",
-  "description": "a template engine",
+  "description": "a templating engine",
   "main": "index.js",
   "scripts": {
     "test": "mocha",
