--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "chai": "^4.1.0",
     "colors": "^1.1.2",
+    "is-number": "^3.0.0",
     "mocha": "^3.4.2"
   },
   "repository": {
