--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a templating engine",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha test/tests/test.js || echo",
     "build": "nodemon test/main.js",
     "server": "webpack-dev-server --web-content src"
   },
@@ -14,10 +14,10 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "chai": "^4.1.0",
+    "chai": "^4.1.2",
     "colors": "^1.1.2",
     "is-number": "^3.0.0",
-    "mocha": "^3.4.2"
+    "mocha": "^3.5.0"
   },
   "repository": {
     "type": "git",
